--- a/src/app/components/inicio/hero/hero.component.html
+++ b/src/app/components/inicio/hero/hero.component.html
@@ -4,9 +4,9 @@
   <!-- Hero section -->
   <section class="hero d-flex align-items-sm-stretch">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-image-profile" [src]="miPortfolio.hero.imagenPerfil" alt="Imagen principal de Alexander Repollo" title="Imagen principal de Alexander Repollo">
-      <h1>{{miPortfolio.hero.saludoPrincipal}}</h1>
-      <h2>{{miPortfolio.hero.descripcion}}</h2>
+      <img class="hero-image-profile" *ngIf="miPortfolio" [src]="miPortfolio.imagenPerfil" alt="Imagen principal de Alexander Repollo" title="Imagen principal de Alexander Repollo">
+      <h1 *ngIf="miPortfolio" >{{miPortfolio.saludoPrincipal}}</h1>
+      <h2 *ngIf="miPortfolio" >{{miPortfolio.descripcion}}</h2>
     </div>
   </section>
 
