--- a/src/app/components/user-interface/experienciamod/experienciamod.component.html
+++ b/src/app/components/user-interface/experienciamod/experienciamod.component.html
@@ -3,12 +3,13 @@
     <div class="container d-flex flex-column seccion-glass">
 
       
-      <h2 class="exp-title text-center ">Experiencia</h2>
+      <h2 class="exp-title text-center ">Experiencia </h2>
       
 
       <!-- Añadir nueva experiencia -->
       <label class="cv" for="tfexp">Nueva experiencia <i class="fa-solid fa-plus"></i></label>
       <input name="tfexp" id="tfexp" class="toggle-form-hero" type="checkbox" checked >
+      
 
       <!-- Formulario de edicion -->
       <form class="formulario-edicion" id="expe-form">
@@ -30,7 +31,7 @@
       </form>
 
       <!-- A partir de aca, empieza cada experiencia individual -->
-      <div *ngFor="let experiencia of experienciaList" class="exp-cont row seccion-glass seccion-glass-h d-flex justify-content-center">
+      <div *ngFor="let experiencia of miPortfolio" class="exp-cont row seccion-glass seccion-glass-h d-flex justify-content-center">
         <!-- div que contiene los iconos para editar y eliminar -->
         <div class="cont-top">
           <a class="edit" title="Eliminar">
