--- a/src/app/components/user-interface/footermod/footermod.component.html
+++ b/src/app/components/user-interface/footermod/footermod.component.html
@@ -21,8 +21,8 @@
       </div>
     </form>
 
-    <p class="contacto-lema ">{{footerList.fraseDescriptiva}}</p>
-    <p class="contacto-preg">{{footerList.fraseDeContacto}}</p>
+    <p class="contacto-lema " *ngIf="miPortfolio">{{miPortfolio.fraseDescriptiva}}</p>
+    <p class="contacto-preg" *ngIf="miPortfolio">{{miPortfolio.fraseDeContacto}}</p>
 
     <!-- Boton de "Nueva Habilidad" -->
     <label class="cv" for="tfcontact">Editar <i class="fa-solid fa-pen"></i></label>
@@ -58,19 +58,19 @@
     <div class="iconos-contacto">
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
         
-        <a [href]="footerList.facebookURL" target="_blank" rel="noopener noreferrer">
+        <a *ngIf="miPortfolio" [href]="miPortfolio.facebookURL" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-facebook"></i>
         </a>
-        <a [href]="footerList.githubURL" target="_blank" rel="noopener noreferrer">
+        <a *ngIf="miPortfolio" [href]="miPortfolio.githubURL" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a [href]="footerList.linkedinURL" target="_blank" rel="noopener noreferrer">
+        <a *ngIf="miPortfolio" [href]="miPortfolio.linkedinURL" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a [href]="footerList.instagramURL" target="_blank" rel="noopener noreferrer">
+        <a *ngIf="miPortfolio" [href]="miPortfolio.instagramURL" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
-        <a [href]="mailtoString" target="_blank" rel="noopener noreferrer">
+        <a *ngIf="miPortfolio" [href]="mailtoString" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
