--- a/src/app/components/inicio/habilidades/habilidades.component.html
+++ b/src/app/components/inicio/habilidades/habilidades.component.html
@@ -32,10 +32,6 @@
           
         </div>
       </div>
-      <!-- Habilidades Blandas -->
-      <!-- <h2 class="exp-title text-center ">Habilidades Blandas</h2>
-      <div class="exp-cont row seccion-glass seccion-glass-h d-flex justify-content-center">
-      </div> -->
       <!-- Idiomas & conociemintos extra -->
       <h2 class="exp-title text-center ">Idiomas</h2>
       <div class="hab-div-cont container-fluid d-flex flex-column ">
@@ -51,4 +47,20 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+
+
+  <!-- descomentar mi codigo cuando termine -->
+
+
+
+
+
+
+
+
 
