--- a/src/app/components/login/logform/logform.component.html
+++ b/src/app/components/login/logform/logform.component.html
@@ -40,7 +40,7 @@
       </div>
     </form>
 
-    <a routerLink="/signUp" aria-current="page">Don't have an account? <b>Sign Up</b>.</a>
+    <!-- <a routerLink="/signUp" aria-current="page">Don't have an account? <b>Sign Up</b>.</a> -->
   </div>
 </section>
 
