--- a/src/app/components/user-interface/educacionmod/educacionmod.component.html
+++ b/src/app/components/user-interface/educacionmod/educacionmod.component.html
@@ -19,7 +19,7 @@
         </div>
       </form>
 
-      <p class="sobre-mi-description text-center" *ngIf="miPortfolio">{{miPortfolio.descripcion}}</p>
+      <p class="sobre-mi-description text-center" *ngIf="miPortfolio">{{educacionList.descripcion}}</p>
 
       <!-- Boton de "Nuevo Certificado" -->
       <label class="cv" for="tfedu">Nuevo certificado <i class="fa-solid fa-plus"></i></label>
