--- a/src/app/components/user-interface/navbarmod/navbarmod.component.html
+++ b/src/app/components/user-interface/navbarmod/navbarmod.component.html
@@ -30,14 +30,14 @@
               <div class="btn-group">
                 <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                   <!-- La idea es que esta foto sea la misma que la de perfil y que cambie dinamicamente segun quiera el usuario. -->
-                  <img class="hero-image-profile-small" *ngIf="miPortfolio" [src]="miPortfolio.imagenPerfil" alt="Imagen de perfil" title="Imagen de perfil">
+                  <img class="hero-image-profile-small" *ngIf="miPortfolio" [src]="miPortfolio.hero.imagenPerfil" alt="Imagen de perfil" title="Imagen de perfil">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end seccion-glass">
                   <!-- Con el routerLink, le decimos que componente cargar -->
-                  <li>
+                  <!-- <li>
                     <a routerLink="/login" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-pen"></i>Modo Edicion</a>
-                  </li>
-                  <!-- Se supone que cuando se hace click en este boton, se muestra el portfolio original, pero con los datos del usuario. -->
+                  </li> -->
+                  
                   <li>
                     <a aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-check"></i>Presentacion</a>
                   </li>
@@ -56,6 +56,12 @@
   </nav>
 
 <!-- Font Awesome for Icons -->
-<script src="https://kit.fontawesome.com/cf8ef6e8a5.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/cf8ef6e8a5.js" crossorigin="anonymous"></script> -->
+
+
+
+<!-- Descomentar navbar cuando termines de trabajar -->
+
+
 
 
