--- a/src/app/components/inicio/educacion/educacion.component.css
+++ b/src/app/components/inicio/educacion/educacion.component.css
@@ -68,9 +68,6 @@
   max-width: 1400px;
 }
 
-/* .certi-item, .certi-header, .certi-body {
-  background-color: var(--light-color-2);
-} */
 
 .certi-header {
   border-radius: 10px;
@@ -83,7 +80,6 @@
 .certi-item {
   
   width: 320px;
-  /* height: 390px; */
   margin: 10px;
   border-radius: 10px;
   background-color: var(--shadow-1);
@@ -134,21 +130,53 @@
 
 
 
+/* Descomentar mi CSS original cuando termine */
 
 
-/* Responsive logo de lemon */
-/* resizing logo lemon for screen sizes less than 400px; */
-@media screen and (max-width: 400px) {
-  .logo-inst-lemon {
-    width: 300px;
-    height: 40px;
-  }
+
+
+
+
+
+/* card educacion */
+/* .edu-title {
+  text-align: left;
+  font-weight: bold;
+  font-size: 3rem;
+  color: black;
+  text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa,
+    0 5px 0 #acacac, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.edu-sec {
+  padding: 40px 20px;
+}
+.card-container {
+  padding: 10px;
+}
+.card-1 {
+  min-width: 320px;
+  max-width: 380px;
+  height: 390px;
+  padding: 0;
+}
+.card {
+  margin: 40px 10px;
+  transition: all 0.2s ease;
+}
+.card:hover {
+  transform: scale(1.05);
+}
+.card-image {
+  width: 100%;
+  height: 270px;
 }
 
-/* resizing logo lemon for screen sizes less than 300px; */
-@media screen and (max-width: 300px) {
-  .logo-inst-lemon {
-    width: 250px;
-    height: 30px;
-  }
-}
+.card-body {
+  background-color: #efefef;
+} */
+
