--- a/src/app/components/inicio/experiencia/experiencia.component.html
+++ b/src/app/components/inicio/experiencia/experiencia.component.html
@@ -5,7 +5,7 @@
       <div class="container">
         <!-- A partir de aca, empieza cada experiencia individual -->
 
-        <div *ngFor="let experiencia of miPortfolio" class="exp-cont row seccion-glass seccion-glass-h d-flex justify-content-center">
+        <div *ngFor="let experiencia of experienciaList" class="exp-cont row seccion-glass seccion-glass-h d-flex justify-content-center">
           <img class="exp-image col-12 " *ngIf="miPortfolio" [src]="experiencia.logo" alt="Person icon">
           <div class="exp-info d-flex flex-column col-12">
             <h3 *ngIf="miPortfolio"> {{experiencia.posicionYtiempo}}</h3>
