--- a/src/app/components/inicio/hero/hero.component.html
+++ b/src/app/components/inicio/hero/hero.component.html
@@ -3,10 +3,10 @@
 
   <!-- Hero section -->
   <section class="hero d-flex align-items-sm-stretch">
-    <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-image-profile" *ngIf="miPortfolio" [src]="miPortfolio.imagenPerfil" alt="Imagen principal de Alexander Repollo" title="Imagen principal de Alexander Repollo">
-      <h1 *ngIf="miPortfolio" >{{miPortfolio.saludoPrincipal}}</h1>
-      <h2 *ngIf="miPortfolio" >{{miPortfolio.descripcion}}</h2>
+    <div *ngFor="let her of miPortfolio " class="hero-principal d-flex flex-column justify-content-center align-items-center">
+      <img class="hero-image-profile" *ngIf="miPortfolio" [src]="her.img_profile" alt="Imagen principal de Alexander Repollo" title="Imagen principal de Alexander Repollo">
+      <h1 *ngIf="miPortfolio" >{{her.saludo}}</h1>
+      <h2 *ngIf="miPortfolio" >{{her.profesion}}</h2>
     </div>
   </section>
 
