--- a/src/app/components/user-interface/experienciamod/experienciamod.component.html
+++ b/src/app/components/user-interface/experienciamod/experienciamod.component.html
@@ -46,6 +46,9 @@
           <a class="edit" title="Eliminar" (click)="deleteExpe()" >
             <i class="fa-regular fa-trash-can"></i>
           </a>
+          <a class="edit" title="Editar" (click)="editarExpe()" >
+            <i class="fa-solid fa-pen"></i>
+          </a>
         </div>
 
         <img class="exp-image col-12 " [src]="experiencia.logo" alt="Person icon">
