--- a/src/app/components/user-interface/habilidadesmod/habilidadesmod.component.html
+++ b/src/app/components/user-interface/habilidadesmod/habilidadesmod.component.html
@@ -6,7 +6,7 @@
       <h2 class="exp-title text-center ">Habilidades Técnicas</h2>
 
       <!-- Boton de "Nueva Habilidad" -->
-      <label class="cv" for="tfhab">Nuevo certificado <i class="fa-solid fa-plus"></i></label>
+      <label class="cv" for="tfhab">Nueva habilidad <i class="fa-solid fa-plus"></i></label>
       <input name="tfhab" id="tfhab" class="toggle-form-hero" type="checkbox" checked >
 
       <!-- Formulario de edicion -->
@@ -46,6 +46,9 @@
               <a class="edit" title="Eliminar">
                 <i class="fa-regular fa-trash-can" ></i>
               </a>
+              <a class="edit" title="Editar">
+                <i class="fa-solid fa-pen" ></i>
+              </a>
             </div>
 
           </div>
@@ -61,6 +64,9 @@
             <div class="cont-top">
               <a class="edit" title="Eliminar">
                 <i class="fa-regular fa-trash-can" ></i>
+              </a>
+              <a class="edit" title="Editar">
+                <i class="fa-solid fa-pen" ></i>
               </a>
             </div>
 
@@ -78,6 +84,9 @@
             <div class="cont-top">
               <a class="edit" title="Eliminar">
                 <i class="fa-regular fa-trash-can" ></i>
+              </a>
+              <a class="edit" title="Editar">
+                <i class="fa-solid fa-pen" ></i>
               </a>
             </div>
           </div>
@@ -103,6 +112,9 @@
             <div class="cont-top">
               <a class="edit" title="Eliminar">
                 <i class="fa-regular fa-trash-can" ></i>
+              </a>
+              <a class="edit" title="Editar">
+                <i class="fa-solid fa-pen" ></i>
               </a>
             </div>
           </div>
