--- a/src/app/components/user-interface/educacionmod/educacionmod.component.html
+++ b/src/app/components/user-interface/educacionmod/educacionmod.component.html
@@ -66,6 +66,9 @@
             <a class="edit" title="Eliminar">
               <i class="fa-regular fa-trash-can" ></i>
             </a>
+            <a class="edit" title="Editar">
+              <i class="fa-solid fa-pen" ></i>
+            </a>
           </div>
           <h3 class="certi-header">
             
