--- a/src/app/components/user-interface/proyectosmod/proyectosmod.component.html
+++ b/src/app/components/user-interface/proyectosmod/proyectosmod.component.html
@@ -45,6 +45,9 @@
           <a class="edit" title="Eliminar">
             <i class="fa-regular fa-trash-can" ></i>
           </a>
+          <a class="edit" title="Editar">
+            <i class="fa-solid fa-pen" ></i>
+          </a>
         </div>
 
         <div class="overlay-relative ">
