--- a/src/app/components/inicio/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/inicio/sobre-mi/sobre-mi.component.html
@@ -4,11 +4,11 @@
 
 <!-- Sobre mi -->
 <section class="sobre-mi seccion-clara d-flex align-items-center justify-content-center">
-  <div class="sobre-mi-cont container row d-flex flex-row align-items-stretch justify-content-between">
-    <img class="sobre-mi-image img-fluid col-12 col-lg-4" *ngIf="miPortfolio" [src]="miPortfolio.sobreMi.imagenSecundaria" alt="Foto de Alexander en seccion 'Sobre mi'." title="Foto de Alexander">
+  <div class="sobre-mi-cont container row d-flex flex-row align-items-stretch justify-content-between" *ngFor="let sob of miPortfolio">
+    <img class="sobre-mi-image img-fluid col-12 col-lg-4" *ngIf="miPortfolio" [src]="sob.second_img" alt="Foto de Alexander en seccion 'Sobre mi'." title="Foto de Alexander">
     <div class="container col-12 col-md-8 d-flex flex-column justify-content-center align-items-center">
       <h2 class="sobre-mi-title">Conoce un poco sobre mi!.</h2>
-      <p class="sobre-mi-description text-center" *ngIf="miPortfolio">{{miPortfolio.sobreMi.descripcion}}<i class="bi bi-cup-hot"></i></p>
+      <p class="sobre-mi-description text-center" *ngIf="miPortfolio">{{sob.description}}<i class="bi bi-cup-hot"></i></p>
     </div>
   </div>
 </section>
